# WPSwitch_Receiver_Submersible

./: .gitignore  ProjectStatus.md
ControlUnit/main/: CMakeLists.txt  Kconfig  app_events.h  board_pins.h  idf_component.yml  main.cc  secrets.h
ControlUnit/main/bluetooth/: BluFiCrypto.cc  BluFiCrypto.h  BluetoothManager.cc  BluetoothManager.h
ControlUnit/main/certs/: firebase_function.pem  https_server_certificate.pem  https_server_key.pem
ControlUnit/main/data/: TaskConfig.h  dataTypes.h
ControlUnit/main/filters/: WaterLevelKalmanFilter.cc  WaterLevelKalmanFilter.h  WaterLevelMedianFilter.cc  WaterLevelMedianFilter.h
ControlUnit/main/https/: HttpsClient.cc  HttpsClient.h  HttpsServer.cpp  HttpsServer.h
ControlUnit/main/ledIndication/: LedIndication.cc  LedIndication.h
ControlUnit/main/mqtt/: MQTTManager.cc  MQTTManager.h  MqttCommandProcessor.cc  MqttCommandProcessor.h
ControlUnit/main/ota/: otaManager.cc  otaManager.h
ControlUnit/main/peripherals/: BuzzerControl.cc  BuzzerControl.h  I2CManager.cc  I2CManager.h  PeripheralManager.cc  PeripheralManager.h  SensorDataRepo.cc  SensorDataRepo.h  UartManager.cc  UartManager.h
ControlUnit/main/pump_controller/: PumpController.cc  PumpController.h
ControlUnit/main/storage/: nvsManager.cpp  nvsManager.h
ControlUnit/main/switching_unit/: SwitchingUnitManager.cc  SwitchingUnitManager.h
ControlUnit/main/uart_protocol/: UartCrypto.cc  UartCrypto.h  UartFraming.cc  UartFraming.h  UartProtocol.h
ControlUnit/main/utils/: HeapMonitor.cc  HeapMonitor.h
ControlUnit/main/wifi/: DynamicCredentialGenerator.cpp  (+3 more)
(+46 files in other folders)
